--- a/mev-info/bsc-mainnet/builder-list.toml
+++ b/mev-info/bsc-mainnet/builder-list.toml
@@ -210,3 +210,15 @@ Address = "0xFD3F1Ad459D585C50Cf4630649817C6E0cec7335"
 RPC = "https://bsc-mainnet-builder.nodereal.io"
 Website = "https://nodereal.io/"
 Description = "Advanced Infrastructure Provider for EVM blockchains."
+
+[flashblock-us]
+Address = "0x9c6b0870752cdd1b3f9aac28c0207e8126f8e1b8"
+RPC = "https://us.bsc.flashblock.trade"
+Website = "https://www.flashblock.trade"
+Description = "Built for Traders. Lightning-Fast Transaction Execution on BSC."
+
+[flashblock-eu]
+Address = "0x89b08890751b28511541f5fed08d7d964caae911"
+RPC = "https://us.bsc.flashblock.trade"
+Website = "https://www.flashblock.trade"
+Description = "Built for Traders. Lightning-Fast Transaction Execution on BSC."
